# remoteexec

./: .gitignore  README.md  pyproject.toml
examples/: 01_basic_example.py  02_with_slurmexec.py  hello_world.py
src/remoteexec/: __init__.py  base.py  remoteexec_client.py  remoteslurmexec_client.py  slurm.py  slurmexec_client.py  utils.py
tests/: slurm_hello_world.py  test_exec.ipynb  test_exec.py
